tests/spec/compile-pass/030_shared_send_sync_interface_thread.zn
// category: compile-pass
// profile: hosted
// purpose: Shared<SharedInterface> can be shared across threads for read-only dispatch

module tests.pass.sharedSendSyncInterfaceThread;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};
import std.thread.Thread;

interface Identified {
    fn id(self) -> U32;
}

interface SharedIdentified: Identified, Send, Sync {}

struct Service: Copy {
    idValue: U32,
}

impl Identified for Service {
    fn id(self) -> U32 {
        return self.idValue;
    }
}

impl SharedIdentified for Service {}

fn makeShared(mut allocator: GlobalAllocator) -> Shared<SharedIdentified> {
    val service = Service { idValue: 11 };
    return Shared.newIn(service, mut allocator);
}

fn main(mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    val service = makeShared(mut allocator);
    val forThread = service.clone();
    val handle = try Thread.spawn(move () -> U32 {
        return forThread.id();
    });
    val ignored = try move handle.join();
    return Ok(());
}
